# arxiv-ai-research-tracker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  api.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: eval.yml
agents/: runner.py  supervisor.py  tools.py
databases/: citation_graph.py  export_utils.py  interest_rerank.py  last_run.txt  llm_cache.db  papers_raw.jsonl  saved_metadata.db  saved_metadata.py  stores.py  trends_utils.py
databases/embedding_cache/: cache.db
databases/lancedb/papers.lance/_indices/1252c081-3224-45bf-a8e8-8287177a8bdb/: metadata.lance
databases/lancedb/papers.lance/_indices/25e2b1a5-b6b5-4859-b558-f1aca6f1c558/: metadata.lance
databases/lancedb/papers.lance/_indices/28814eb9-a13a-41a1-bea4-9d0c5afc4197/: metadata.lance
databases/lancedb/papers.lance/_indices/2c677b39-348b-43e2-bea2-843674fb5c53/: metadata.lance
databases/lancedb/papers.lance/_indices/32e83656-be3e-45d6-b623-7c7a6ee06b58/: metadata.lance
databases/lancedb/papers.lance/_indices/381d3b1c-c09d-46dc-8f63-81dd83911aab/: metadata.lance
databases/lancedb/papers.lance/_indices/3b09e687-d99e-4a2b-8ab7-52217fa2425d/: metadata.lance
databases/lancedb/papers.lance/_indices/3d65c9ca-57a9-4725-bb7b-085ba84a671c/: metadata.lance
databases/lancedb/papers.lance/_indices/406c9f31-c926-4da3-87e4-241839de852c/: metadata.lance
databases/lancedb/papers.lance/_indices/437a8614-2dbe-449c-a0d8-2a8ff0254e91/: metadata.lance
databases/lancedb/papers.lance/_indices/45adaa6e-468b-4bc9-be35-7749f89870bb/: metadata.lance
databases/lancedb/papers.lance/_indices/47df439c-73a9-417c-b1d5-3d3a4298001b/: metadata.lance
databases/lancedb/papers.lance/_indices/498200cb-150a-42b8-924a-7e92974e27af/: metadata.lance
databases/lancedb/papers.lance/_indices/4a8c8577-c8da-4dfa-8d75-2421607eb53f/: metadata.lance
databases/lancedb/papers.lance/_indices/4d7cee89-155b-4616-8c07-e57da9237815/: metadata.lance  part_0_tokens.lance
databases/lancedb/papers.lance/_transactions/: 0-036c6285-bbc1-4ee1-b1c3-7e35b2e8579e.txn  1-3b4adc77-c476-46fc-a330-940486e7cb86.txn  10-9919cf30-7e34-470d-aa69-af2520615323.txn  100-c3b43362-5c64-4db9-a5f7-841c6b8284fa.txn  101-cabe41bb-8133-4e91-86cf-028a1cf049f2.txn  102-b7e4b2fa-eff2-4886-a853-78d6ee2a0d9e.txn  103-b9ada48b-7fc8-471c-8b70-e82ff8301a14.txn  104-645a17b2-3c83-4716-a72a-fa7e88db5220.txn  105-75978aa6-8478-456e-8504-12810348b84a.txn  106-bbfd62b5-4da3-4091-803c-6a7af9c0317a.txn  107-7b333cca-c895-447e-91fb-ef59582c5801.txn  108-d8678af1-bd82-4555-a491-ccaa4742f23c.txn  109-499f1abe-0f0e-42ed-9628-d1d826adb0ec.txn  11-6170600d-218e-469d-9b66-6d407c41d3a5.txn  110-f2ecdd53-a057-4a6b-bf54-13f4e56429cd.txn  111-ae1a2f7c-26e8-4d8d-a016-364ba1f4b595.txn  112-24cc34c0-4d75-4aef-ba5f-8d4d9e9db114.txn  113-21c24112-847f-4e1c-9040-2702411fc23b.txn  114-ee592843-77a6-450c-b679-796705287f0b.txn  115-9525aa90-d4fd-43c7-bdf3-21139ff5b299.txn  116-b1672fa5-6d3a-4210-a217-89751e74470c.txn  117-68df41b9-51e6-4374-9aa2-b13a2b5d4c86.txn  118-bb5659b9-ecf7-429a-89cb-9f6af0abdf5a.txn  119-2c17c316-ee9e-444c-8bc1-53428fc8327e.txn  12-d9f06b57-687c-4c4e-aeaf-49942ccd81f5.txn  120-1d3a0601-455d-444a-b4a1-941961d1cfc7.txn  121-68d17d85-da85-44b5-9693-2fa61abd63a4.txn  122-d1e11ba0-d823-4cf8-adbb-71511d1d9766.txn  123-0714a47b-016a-4d18-8688-7f586761f61a.txn  124-68221957-88b1-4d83-a154-ec10c03d0e88.txn  125-2b60843a-cccb-4bcc-b41b-52735fe88509.txn  126-c0925d48-2841-4642-b88a-2755b36058b7.txn  127-511ccb94-8809-4ba4-b342-e8572b83c6b7.txn  128-f22852af-d705-4fb8-a390-cab10b209ca8.txn  129-38b1fe3e-7c5c-47a9-a13b-e28eb088b816.txn  13-9cccbdc6-4cf5-4e4d-a58b-0b49747ea73c.txn  130-39a2aa26-8013-41e5-b52c-54738736f638.txn  131-017ab98f-a3fe-4b59-ac23-b71fad1f9b41.txn  132-baec1898-c8a0-4593-9638-0078558596c6.txn  133-36b7345e-ba91-4024-9703-6386f53c6e5c.txn  (+184 more)
docs/: sample_terminal_session.txt
evaluation/: cost_analysis.py  cost_vs_quality.json  datasets.py  eval_metrics_snapshot.json  judges.py  run_eval.py  test_api.py  test_citation_graph.py  test_feature_helpers.py  test_guardrails.py  test_output_validator.py  test_prompt_guard.py  test_rag.py  test_summarizer.py
grafana/: dashboard.json  prometheus.yml
grafana/provisioning/datasources/: prometheus.yml
guardrails/: output_validator.py  prompt_guard.py  sanitizer.py
ingestion/: arxiv_fetcher.py
prompts/: summarize.txt
(+36 files in other folders)
