[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["agents*", "databases*", "ingestion*", "guardrails*", "evaluation*"]

[project]
name = "ai-paper-explorer"
version = "0.2.0"
description = "A research assistant that fetches, summarizes, and curates AI papers from arXiv"
requires-python = ">=3.13"
dependencies = [
    # LangChain / LangGraph core
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-experimental",
    "langchain-text-splitters",
    "langgraph",
    # LLM providers
    "langchain-openai",       # OpenAI (agent + fallback summarizer)
    "langchain-anthropic",    # Claude (optional agent LLM)
    "langchain-ollama",       # Ollama/Llama (local summarizer)
    "diskcache",              # lightweight disk-backed embedding cache
    # Infra
    "openai",
    "lancedb",
    "arxiv",
    "python-dotenv",
    # Reranking — cross-encoder for hybrid search precision
    "sentence-transformers",
    # Tracing — LangSmith traces activated by LANGCHAIN_TRACING_V2=true + LANGCHAIN_API_KEY
    "langsmith",
    # Utilities
    "numpy",
    "pandas",
    "requests",
    "beautifulsoup4",          # HTML parsing for arXiv figure extraction
    "pymupdf",                 # PDF image extraction fallback
    "tenacity",
    "tqdm",
    "pydantic",
    "typing-extensions",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "fastapi",
    "uvicorn",
]

[project.scripts]
ai-paper-explorer = "main:main"

[dependency-groups]
dev = [
    "pytest",
    "black",
    "ruff",
    "pre-commit",
    "deepeval",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names, etc.)
    "I",   # isort (import ordering)
    "B",   # flake8-bugbear (likely bugs and design issues)
    "UP",  # pyupgrade (modernise syntax for target Python version)
    "S",   # flake8-bandit (basic security checks)
    "RUF", # ruff-specific rules
]
ignore = [
    "S101",  # allow assert statements (used in stores.py type guards)
    "B008",  # allow function calls in default arguments (LangChain patterns)
]

[tool.ruff.lint.per-file-ignores]
"evaluation/*" = ["S"]        # security rules less relevant in test/eval code
"evaluation/datasets.py" = ["E501"]  # paper abstracts are long strings, can't wrap them
# stores.py intentionally imports after load_dotenv() and set_llm_cache() calls —
# the import order is load-order-sensitive, not alphabetical.
"databases/stores.py" = ["E402", "F821"]  # F821: diskcache forward ref already type-ignored

[tool.ruff.lint.isort]
known-first-party = ["agents", "databases", "ingestion", "guardrails", "evaluation"]

[tool.pytest.ini_options]
filterwarnings = [
    # langchain_core pydantic v1 shim is not compatible with Python 3.14+ — upstream issue
    "ignore:Core Pydantic V1 functionality isn't compatible:UserWarning",
    # backoff library uses deprecated asyncio.iscoroutinefunction — upstream issue
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning:backoff",
]

[tool.black]
line-length = 100
target-version = ["py313"]
